--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <title>Accounts</title>
 <!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css"> -->
     <link rel="stylesheet" href="bootstrap-3.3.4-dist/css/bootstrap.min.css">
-    <script src="js/build.js"></script>
+    <script src="js/build.min.js"></script>
   </head>
   <body>
     <section id="content"></section>
