--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Accounts</title>
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
-    <script src="js/build.js"></script>
+    <script src="js/build.min.js"></script>
   </head>
   <body>
     <section id="content"></section>
