--- a/public/index.html
+++ b/public/index.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Accounts</title>
     <link rel="stylesheet" href="bootstrap-3.3.5-dist/css/bootstrap.min.css">
-    <script src="js/build.min.js"></script>
   </head>
   <body>
     <section id="content"></section>
-    <script> require('app').main()</script>
+    <script src="js/build.js"></script>
   </body>
 </html>
