--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,6 @@
   </head>
   <body>
     <section id="content"></section>
-    <script src="js/build.js"></script>
+    <script src="js/build.min.js"></script>
   </body>
 </html>
